--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -57,8 +57,15 @@
     "@reactuses/core": "^6.0.5",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-table": "^3.3.0",
+    "@tiptap/extension-table-cell": "^3.3.0",
+    "@tiptap/extension-table-header": "^3.3.0",
+    "@tiptap/extension-table-row": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
     "@types/crypto-js": "^4.2.2",
-
+    "@types/pg": "^8.15.5",
+    "@types/puppeteer": "^5.4.7",
     "@types/qrcode": "^1.5.5",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -68,6 +75,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.23.2",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
@@ -78,14 +86,16 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
-
     "pg": "^8.16.3",
+    "puppeteer": "^24.17.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "react-data-grid": "^7.0.0-beta.57",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
@@ -98,7 +108,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "exceljs": "^4.4.0",
+    "xlsx": "^0.18.5",
     "z-ai-web-dev-sdk": "^0.0.10",
     "zod": "^4.0.2",
     "zustand": "^5.0.6"
