--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/puppeteer": "^5.4.7",
     "@types/qrcode": "^1.5.5",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
