--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,3 @@
 name = "fleet-manager-system"
 compatibility_date = "2024-01-01"
-
-[env.production]
-vars = { NODE_ENV = "production" }
-
-[[env.production.routes]]
-pattern = "www.primeofferonline.shop/*"
-zone_name = "primeofferonline.shop"
+pages_build_output_dir = ".next"
