--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,9 @@
 name = "fleet-manager-system"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = ".next"
+
+[build]
+command = "npm run cf-build"
+
+[build.environment_variables]
+NODE_ENV = "production"
