--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,18 @@
-# Database Configuration (Neon PostgreSQL)
-DATABASE_URL="postgresql://username:password@host:5432/database?sslmode=require"
-DATABASE_DIRECT_URL="postgresql://username:password@host:5432/database?sslmode=require"
+# Database
+DATABASE_URL="file:./dev.db"
 
-# JWT Configuration
-JWT_SECRET="your-jwt-secret-key-here-minimum-32-characters"
-JWT_EXPIRES_IN="7d"
+# Authentication - REQUIRED FOR SECURITY
+JWT_SECRET="your-super-secure-32-character-secret-key-here-change-this"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-nextauth-secret-key-change-this-too"
 
-# Application Configuration
-NEXT_PUBLIC_APP_URL="https://your-app.vercel.app"
-NEXTAUTH_URL="https://your-app.vercel.app"
-NEXTAUTH_SECRET="your-nextauth-secret-key-here-minimum-32-characters"
-NODE_ENV="production"
-PORT="3000"
+# Email Service (Resend)
+RESEND_API_KEY="your-resend-api-key"
+EMAIL_FROM="Fleet Manager <noreply@yourdomain.com>"
+RESEND_DOMAIN="yourdomain.com"
 
-# Email Configuration (Resend)
-RESEND_API_KEY="re_your_resend_api_key_here"
-EMAIL_FROM="Your App <noreply@yourdomain.com>"
-EMAIL_REPLY_TO="support@yourdomain.com"
-EMAIL_SUPPORT="support@yourdomain.com"
+# App Configuration
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# File Upload Configuration
-UPLOAD_MAX_SIZE="10485760"  # 10MB in bytes
-ALLOWED_FILE_TYPES="image/jpeg,image/png,image/gif,application/pdf,text/plain,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document"
-UPLOAD_DIR="/tmp/uploads"
-MAX_FILE_COUNT="10"
-
-# AI Services
-REMOVE_BG_API_KEY="your-remove-bg-api-key"  # Get from https://www.remove.bg/api
-OPENAI_API_KEY=""  # Optional: For AI features
-
-# Security Configuration
-CORS_ORIGIN="https://your-app.vercel.app"
-RATE_LIMIT_MAX="100"  # Requests per window
-RATE_LIMIT_WINDOW="900000"  # 15 minutes in ms
-SESSION_TIMEOUT="86400000"  # 24 hours in ms
-
-# Feature Flags
-ENABLE_REGISTRATION="true"
-ENABLE_EMAIL_VERIFICATION="true"
-ENABLE_TWO_FACTOR="false"
-ENABLE_MAINTENANCE_MODE="false"
-
-# Company Information
-COMPANY_NAME="Your Company Name"
-COMPANY_EMAIL="contact@yourdomain.com"
-COMPANY_WEBSITE="https://your-app.vercel.app"
+# Optional: AI Features
+OPENAI_API_KEY="your-openai-api-key"
