Add real-time sync system for local-to-production deployment

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,10 @@ RESEND_DOMAIN="yourdomain.com"
 # App Configuration
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
+# Real-time Sync
+SYNC_ENABLED="true"
+PRODUCTION_URL="https://your-app.vercel.app"
+VERCEL_TOKEN="your-vercel-token"
+
 # Optional: AI Features
 OPENAI_API_KEY="your-openai-api-key"
