Add Vercel Analytics and Speed Insights integration

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ VERCEL_TOKEN="your-vercel-token"
 
 # Optional: AI Features
 OPENAI_API_KEY="your-openai-api-key"
+
+# Vercel Analytics & Speed Insights
+NEXT_PUBLIC_VERCEL_ANALYTICS_ID="your-vercel-analytics-id"
+VERCEL_ANALYTICS_ID="your-vercel-analytics-id"
