Update domain to fleetmanager.space in all env files

--- a/.env.example
+++ b/.env.example
@@ -8,15 +8,15 @@ NEXTAUTH_SECRET="your-nextauth-secret-key-change-this-too"
 
 # Email Service (Resend)
 RESEND_API_KEY="your-resend-api-key"
-EMAIL_FROM="Fleet Manager <noreply@yourdomain.com>"
-RESEND_DOMAIN="yourdomain.com"
+EMAIL_FROM="Fleet Manager <noreply@fleetmanager.space>"
+RESEND_DOMAIN="fleetmanager.space"
 
 # App Configuration
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # Real-time Sync
 SYNC_ENABLED="true"
-PRODUCTION_URL="https://your-app.vercel.app"
+PRODUCTION_URL="https://fleetmanager.space"
 VERCEL_TOKEN="your-vercel-token"
 
 # Optional: AI Features
