Update Resend API key and add SMTP configuration

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,9 @@ OPENAI_API_KEY="your-openai-api-key"
 # Vercel Analytics & Speed Insights
 NEXT_PUBLIC_VERCEL_ANALYTICS_ID="your-vercel-analytics-id"
 VERCEL_ANALYTICS_ID="your-vercel-analytics-id"
+
+# SMTP Configuration (Alternative to REST API)
+SMTP_HOST="smtp.resend.com"
+SMTP_PORT="465"
+SMTP_USER="resend"
+SMTP_PASSWORD="your-resend-api-key"
