fix: comprehensive system improvements - security, performance, testing, and DevOps

--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "cf-build": "prisma generate && next build && rm -rf .next/cache",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:reset": "prisma migrate reset",
     "db:seed": "tsx prisma/seed.ts",
     "db:setup-prod": "tsx scripts/setup-production-db.ts",
     "db:setup-vercel": "tsx scripts/vercel-setup.ts",
-    "test:email": "tsx test-email-config.ts",
+    "db:backup": "bash backup-db.sh",
     "db:studio": "prisma studio",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "test:email": "tsx test-email-config.ts",
     "auto-deploy": "node auto-deploy.js",
     "dev:sync": "concurrently \"npm run dev\" \"npm run auto-deploy\"",
     "postinstall": "prisma generate"
@@ -122,11 +130,16 @@
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.15.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.15.0",
     "tailwindcss": "^4",
