--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,74 @@
 # Dependencies
-node_modules/
+node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+*.test.ts.snap
+
+# Next.js
+/.next/
+/out/
+.next
+
+# Production
+/build
+dist
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Next.js
-.next/
-out/
-
-# Environment variables
+# Local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 .env.production
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
 
 # Database
 *.db
-*.sqlite
+*.db-journal
 prisma/dev.db
+prisma/dev.db-journal
+
+# Backups
+/backups
+*.sql
+*.sql.gz
+
+# Uploads
+/public/uploads/*
+!/public/uploads/.gitkeep
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
 
 # Logs
 logs
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# IDE
-.vscode/
-.idea/
-
 # OS
-.DS_Store
 Thumbs.db
 
-# Uploads
-public/uploads/
+# Temp
+temp-otp-store.json
+sync-config.json
 
-# Build
-dist/
-build/
-.vercel
+# Docker
+.dockerignore
