--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "dev:sync": "concurrently \"npm run dev\" \"npm run auto-deploy\"",
     "postinstall": "prisma generate"
   },
+  "overrides": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
