--- a/package.json
+++ b/package.json
@@ -136,7 +136,9 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
