--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
     }
+  },
+  "env": {
+    "SKIP_ENV_VALIDATION": "1"
   },
   "headers": [
     {
